# ProyectoTBDII

./: .gitignore  consultas.txt
Old/: .ftpconfig
Proyecto/: Alumno.cpp  Alumno.h  AlumnoClases.cpp  AlumnoClases.h  CMakeLists.txt  CapacitadoEn.cpp  CapacitadoEn.h  Categoria.cpp  Categoria.h  Clase.cpp  Clase.h  ClasePractica.cpp  ClasePractica.h  ClaseTeorica.cpp  ClaseTeorica.h  Database.cpp  Database.h  Empleado.cpp  Empleado.h  Instancia.cpp  Instancia.h  LICENSE.txt  Makefile  Makefile.Debug  Makefile.Release  Pago.cpp  Pago.h  Profesor.cpp  Profesor.h  Proyecto.pro  Proyecto.proold  PruebaPractica.cpp  PruebaPractica.h  PruebaTeorica.cpp  PruebaTeorica.h  TipoLicencia.cpp  TipoLicencia.h  Vehiculo.cpp  Vehiculo.h  adminalumno.cpp  (+51 more)
Proyecto TBDII/: SSH Config  Test.txt  main.cpp
Proyecto/lib/: cassandra.lib
Proyecto/release/: moc_adminalumno.cpp  moc_adminclase.cpp  moc_adminempleado.cpp  moc_adminlicencia.cpp  moc_adminprofesor.cpp  moc_adminvehiculo.cpp  moc_mainwindow.cpp  moc_pagoalumno.cpp
build-Proyecto-Desktop_Qt_5_9_4_GCC_64bit-Debug/: Makefile  Proyecto  moc_adminalumno.cpp  moc_adminclase.cpp  moc_adminempleado.cpp  moc_adminlicencia.cpp  moc_adminprofesor.cpp  moc_mainwindow.cpp  ui_adminalumno.h  ui_adminclase.h  ui_adminempleado.h  ui_adminlicencia.h  ui_adminprofesor.h  ui_mainwindow.h
tigrillo/: .project  build.xml  pom.xml
tigrillo/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
tigrillo/src/main/java/com/tigrillo/: App.java
tigrillo/src/test/java/com/tigrillo/: AppTest.java
tigrillo/src/tigrillo/: MainFrame.form  MainFrame.java  Tigrillo.java
